[#803] Add namespace to default ingress host
Creating ActiveMQArtemis CRs with the same name and exposed console in multiple
namespaces causes the error: failed to create new *v1.Ingress

--- a/config/crd/bases/broker.amq.io_activemqartemises.yaml
+++ b/config/crd/bases/broker.amq.io_activemqartemises.yaml
@@ -77,7 +77,7 @@ spec:
                       description: 'Host for Ingress and Route resources of the acceptor.
                         It supports the following variables: $(CR_NAME), $(CR_NAMESPACE),
                         $(BROKER_ORDINAL), $(ITEM_NAME), $(RES_NAME) and $(INGRESS_DOMAIN).
-                        Default is $(CR_NAME)-$(ITEM_NAME)-$(BROKER_ORDINAL)-svc-$(RES_TYPE).$(INGRESS_DOMAIN)'
+                        Default is $(CR_NAME)-$(ITEM_NAME)-$(BROKER_ORDINAL)-svc-$(RES_TYPE)-$(CR_NAMESPACE).$(INGRESS_DOMAIN)'
                       type: string
                     keyStoreProvider:
                       description: Provider used for the keystore; "SUN", "SunJCE",
@@ -503,7 +503,7 @@ spec:
                       description: 'Host for Ingress and Route resources of the acceptor.
                         It supports the following variables: $(CR_NAME), $(CR_NAMESPACE),
                         $(BROKER_ORDINAL), $(ITEM_NAME), $(RES_NAME) and $(INGRESS_DOMAIN).
-                        Default is $(CR_NAME)-$(ITEM_NAME)-$(BROKER_ORDINAL)-svc-$(RES_TYPE).$(INGRESS_DOMAIN)'
+                        Default is $(CR_NAME)-$(ITEM_NAME)-$(BROKER_ORDINAL)-svc-$(RES_TYPE)-$(CR_NAMESPACE).$(INGRESS_DOMAIN)'
                       type: string
                     keyStoreProvider:
                       description: Provider used for the keystore; "SUN", "SunJCE",
@@ -582,7 +582,7 @@ spec:
                     description: 'Host for Ingress and Route resources of the acceptor.
                       It supports the following variables: $(CR_NAME), $(CR_NAMESPACE),
                       $(BROKER_ORDINAL), $(ITEM_NAME), $(RES_NAME) and $(INGRESS_DOMAIN).
-                      Default is $(CR_NAME)-$(ITEM_NAME)-$(BROKER_ORDINAL)-svc-$(RES_TYPE).$(INGRESS_DOMAIN)'
+                      Default is $(CR_NAME)-$(ITEM_NAME)-$(BROKER_ORDINAL)-svc-$(RES_TYPE)-$(CR_NAMESPACE).$(INGRESS_DOMAIN)'
                     type: string
                   name:
                     description: The name of the console. Default is wconsj.
