[#694] Enable prometheus to scrape operator and doc update
Signed-off-by: Mcnamara, Robert <Robert.Mcnamara@fmr.com>

--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -120,6 +120,9 @@ spec:
           initialDelaySeconds: 15
           periodSeconds: 20
         name: manager
+        ports:
+        - name: http-metrics
+          containerPort: 8383
         readinessProbe:
           httpGet:
             path: /readyz
