[#694] Enable prometheus to scrape operator and doc update
Signed-off-by: Mcnamara, Robert <Robert.Mcnamara@fmr.com>

--- a/bundle/manifests/activemq-artemis-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/activemq-artemis-operator.clusterserviceversion.yaml
@@ -2719,6 +2719,9 @@ spec:
                   initialDelaySeconds: 15
                   periodSeconds: 20
                 name: manager
+                ports:
+                - containerPort: 8383
+                  name: http-metrics
                 readinessProbe:
                   httpGet:
                     path: /readyz
