[#741] Enforce runAsNonRoot for the manager container

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -74,6 +74,7 @@ spec:
           capabilities:
             drop:
             - ALL
+          runAsNonRoot: true
           seccompProfile:
             type: RuntimeDefault
         livenessProbe:
