--- a/deploy/activemq-artemis-operator.yaml
+++ b/deploy/activemq-artemis-operator.yaml
@@ -5207,6 +5207,7 @@ spec:
           capabilities:
             drop:
             - ALL
+          runAsNonRoot: true
           seccompProfile:
             type: RuntimeDefault
       securityContext:
