--- a/bundle/manifests/activemq-artemis-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/activemq-artemis-operator.clusterserviceversion.yaml
@@ -2734,6 +2734,7 @@ spec:
                   capabilities:
                     drop:
                     - ALL
+                  runAsNonRoot: true
                   seccompProfile:
                     type: RuntimeDefault
               securityContext:
