--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -134,6 +134,7 @@ spec:
           capabilities:
             drop:
             - ALL
+          runAsNonRoot: true
           seccompProfile:
             type: RuntimeDefault
       securityContext:
