--- a/bundle/manifests/activemq-artemis-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/activemq-artemis-operator.clusterserviceversion.yaml
@@ -2938,6 +2938,7 @@ spec:
           - delete
           - get
           - list
+          - update
           - watch
         - apiGroups:
           - policy
